# chipsy

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/chipsy_control/: CMakeLists.txt  package.xml
src/chipsy_control/src/: chipsy_arm_inverse_kinematics.cpp  test_node.cpp
src/chipsy_description/: CMakeLists.txt  package.xml
src/chipsy_description/config/: chipsy_arm_control.yaml
src/chipsy_description/launch/: chipsy_arm_control.launch  chipsy_arm_spawn.launch  chipsy_conveyor_spawn.launch  chipsy_multibot.launch  chipsy_ugv_spawn.launch  display.launch  gazebo.launch
src/chipsy_description/models/: conveyor.sdf  test_sdf.sdf  test_spawn.py
src/chipsy_description/src/: ConveyorBeltPlugin.cc  ConveyorBeltPlugin.hh  ConveyorBeltPlugin_Nll.cc
src/chipsy_description/urdf/: chipsy_arm.xacro  chipsy_arm_body.xacro  chipsy_box.xacro  chipsy_conveyor.xacro  chipsy_ugv.xacro
src/chipsy_plugins/: CMakeLists.txt  package.xml
src/chipsy_plugins/src/: ContactPlugin.cc  ContactPlugin.hh  ConveyorBeltPlugin.hh  ConveyorBeltPlugin_Null.hh
